2013-12-04  Rene Liebscher <R.Liebscher@gmx.de>

	Rework of bitbanging functions setpin, getpin, highpulsepin to make simplier use
	of new pindefs data in pgm structure
	* linuxgpio.c, bitbang.c, buspirate.c, par.c, pgm.h, term.c, serbb_*.c: changed 
	  interface of setpin, getpin, highpulsepin to take pin function as parameter 
	  (not the real number, which can be found by pgm->pinno[function])

2013-11-30  Rene Liebscher <R.Liebscher@gmx.de>

	bug #40748 linuxgpio doesn't work on Raspberry PI rev. 2.
	* linuxgpio.c: fixed check for unused pins to ignore the inverse flag 
	* pindefs.c: fixed fill_old_pinlist to not create an empty mask with inverse flag set

2013-10-18  Nils Springob <nils@nicai-systems.de>

        * avrdude.conf.in (atmega1284): ATmega1284 variant added (same as ATmega1284p but with different signature)

2013-09-25  Hannes Weisbach <hannes_weisbach@gmx.net>

	First part of patch #7720:
	* avrdude.conf.in: Add UM232H and C232H programmers

2013-09-22  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Daniel Rozsnyo:
	bug #40085: Typo fix in fuses report (for 6.1-svn-20130917)
	* main.c: Fix a typo.

2013-09-19  Hannes Weisbach <hannes_weisbach@gmx.net>

	task #12798: Please cleanup #ifdef notyet entries in avrftdi.c
	* avrftdi.c: ditto.
	avrftdi.c: Remove DRYRUN-option.

2013-09-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #40055: AVRDUDE segfaults when writing eeprom
	* main.c: Always clear the UF_AUTO_ERASE flag if either a
	non-Xmega device was found, or the programmer does not offer a
	page_erase method.

2013-09-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac (AC_INIT): Bump version to post-6.0.

2013-09-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac (AC_INIT): Bump version to 6.0.

2013-09-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtag3.c (jtag3_initialize): Fix a buffer overflow by limiting
	the flash page cache size to at most "readsize".  For Xmegas with